--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
