contact page and map

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@react-google-maps/api": "^2.19.2",
+    "@vis.gl/react-google-maps": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.1"
